refactor: 검증 관련 공통 로직 추출